# fablab

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/: index.html
src/back/: connection_handler.rs  db_handler.js  fetch_token.js  files_handler.js  login_handler.js  main.rs  server.js  ws_server.js
src/back/storage/orders/965403/: lenovo_vertical_stand.stl
src/front/Assets/favicon/: site.webmanifest
src/front/CSS/: common.css  dashboard_admin.css  login.css  main_admin.css  main_client.css  order.css  terms_conditions.css
src/front/HTML/: dashboard_admin.html  login.html  main_admin.html  main_client.html  order.html  terms_conditions.html
src/front/JS/: feedback_form.js  login.js  login_handler.js  main_admin.js  main_client.js  order.js  utils.js  ws_client.js
src/front/JSON/: print_parameters.json
src/front/front_scripts/: admin_orders_fetcher.js  feedback_form.js  lang_select.js  main_admin.js  main_client.js  order.js
src/scripts/: admin_orders_fetcher.js  client_orders_fetcher.js  order.js  script.js  utils.js
src/styles/: style.css
