[package]
name = "socket"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "back"
path = "src/back/main.rs"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures = "0.3.30"
log ={ version = "0.4.21", features = ["release_max_level_debug"] }
env_logger = "0.11.3"